--- a/caso2.html
+++ b/caso2.html
@@ -63,11 +63,11 @@
       <p>La hipótesis nula es que ambas varianzas son iguales: \( H_0: \sigma_1^2 = \sigma_2^2 \)</p>
       <p>La hipótesis alternativa es: \( H_a: \sigma_1^2 \neq \sigma_2^2 \)</p>
       <p>Se utiliza la siguiente fórmula:</p>
-      <p style="text-align: center;">
+      <div class="formula">
         \[
         F = \frac{s_1^2}{s_2^2} = \frac{75.2}{38.9} \approx 1.9329
         \]
-      </p>
+    </div>
       <p>Este valor de F se compara contra valores críticos de la distribución F con \( df_1 = 96 \) y \( df_2 = 96 \).</p>
     </section>
 
