--- a/caso1.html
+++ b/caso1.html
@@ -56,11 +56,11 @@
     <section class="info-box">
         <h2>Resolución con fórmula</h2>
         <p>Se utiliza la fórmula para diferencia de medias:</p>
-        <p style="text-align: center;">
+        <div class="formula">
           \[
           z = \frac{\bar{x}_A - \bar{x}_B}{\sqrt{\frac{s_A^2}{n_A} + \frac{s_B^2}{n_B}}}
           \]
-        </p>
+        </div>
       
         <p>Donde:</p>
         <ul>
@@ -71,11 +71,11 @@
         </ul>
       
         <p>Reemplazando en la fórmula:</p>
-        <p style="text-align: center;">
-          \[
-          z = \frac{0.0126 - 0.0216}{\sqrt{\frac{0.0124}{11037} + \frac{0.0211}{11034}}} \approx \frac{-0.009}{0.00174} \approx -5.19
-          \]
-        </p>
+        <div class="formula">
+            \[
+            z = \frac{\bar{x}_A - \bar{x}_B}{\sqrt{\frac{s_A^2}{n_A} + \frac{s_B^2}{n_B}}}
+            \]
+          </div>
       </section>
 
     <!-- Conclusión -->
