--- a/caso1.html
+++ b/caso1.html
@@ -73,7 +73,7 @@
         <p>Reemplazando en la fórmula:</p>
         <div class="formula">
             \[
-            z = \frac{\bar{x}_A - \bar{x}_B}{\sqrt{\frac{s_A^2}{n_A} + \frac{s_B^2}{n_B}}}
+            z = \frac{0.0126 - 0.0216}{\sqrt{\frac{0.0124}{11037} + \frac{0.0211}{11034}}} \approx \frac{-0.009}{0.00174} \approx -5.17
             \]
           </div>
       </section>
