--- a/caso1.html
+++ b/caso1.html
@@ -63,12 +63,14 @@
         </div>
       
         <p>Donde:</p>
-        <ul>
-          <li>\( \bar{x}_A = \frac{139}{11037} \approx 0.0126 \)</li>
-          <li>\( \bar{x}_B = \frac{239}{11034} \approx 0.0216 \)</li>
-          <li>\( s_A^2 = 0.0126(1 - 0.0126) \approx 0.0124 \)</li>
-          <li>\( s_B^2 = 0.0216(1 - 0.0216) \approx 0.0211 \)</li>
-        </ul>
+        <div class="formula">
+            <ul>
+              <li>\( \bar{x}_A = \frac{139}{11037} \approx 0.0126 \)</li>
+              <li>\( \bar{x}_B = \frac{239}{11034} \approx 0.0216 \)</li>
+              <li>\( s_A^2 = 0.0126(1 - 0.0126) \approx 0.0124 \)</li>
+              <li>\( s_B^2 = 0.0216(1 - 0.0216) \approx 0.0211 \)</li>
+            </ul>
+          </div>
       
         <p>Reemplazando en la fórmula:</p>
         <div class="formula">
