Versión final final se entrega hoy final

--- a/caso2.html
+++ b/caso2.html
@@ -27,7 +27,7 @@
   <!-- Encabezado -->
   <header>
     <button class="menu-toggle" onclick="toggleSidebar()">☰</button>
-    <h1><a href="index.html" class="titulo-link">Proyecto Final Estadística</a></h1>
+    <h1><a href="index.html" class="titulo-link">Proyecto Final Estadística II</a></h1>
     <img src="icons/UmgLogo.png" alt="Logo UMG" class="logo" />
   </header>
 
