--- a/caso1.html
+++ b/caso1.html
@@ -27,7 +27,7 @@
   <!-- Encabezado -->
   <header>
     <button class="menu-toggle" onclick="toggleSidebar()">☰</button>
-    <h1><a href="index.html" class="titulo-link">Proyecto Final Estadística</a></h1>
+    <h1><a href="index.html" class="titulo-link">Proyecto Final Estadística II</a></h1>
     <img src="icons/UmgLogo.png" alt="Logo UMG" class="logo" />
   </header>
 
@@ -41,6 +41,9 @@
         Se analizaron los datos del <strong>Physicians' Health Study</strong> para determinar si la administración de aspirina en dosis bajas reduce la proporción de infartos de miocardio no fatales en hombres sanos.
         Durante el estudio, un grupo de <strong>11,037 médicos</strong> tomó aspirina cada dos días, y se observaron <strong>139 infartos</strong> en este grupo.
         Otro grupo de <strong>11,034 médicos</strong> tomó un placebo, y se registraron <strong>239 infartos</strong> en este grupo.
+      </p>
+      <p>
+        Fuente: <a href="https://pubmed.ncbi.nlm.nih.gov/2664509/" target="_blank">Physicians' Health Study</a>
       </p>
     </section>
 
